--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,5 +19,6 @@
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "path": "^0.12.7"
-  }
+  },
+  "description": ""
 }
